[gd_scene load_steps=17 format=2]

[ext_resource path="res://Effects/PlayerFireball.png" type="Texture" id=1]
[ext_resource path="res://Effects/ProjectileEffect.gd" type="Script" id=3]
[ext_resource path="res://Player/PlayerFireball.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 500, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 100, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 200, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 300, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Animate",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 11.0001
height = 44.0

[node name="Hitbox" type="Area2D"]
rotation = -1.5708
collision_layer = 0
collision_mask = 8
script = ExtResource( 4 )
KNOCKBACK_FORCE = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 26 )
animation = "Animate"
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.1365e-06, -26 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Hitbox_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
